Add Selected class tag

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -77,10 +77,9 @@ html{
 }
 
 .selected{
-    /* border: 1px solid white;
-    border-radius: 5px; */
+    border: 1px solid white;
+    border-radius: 5px;
     font-size: 45px;
-
 }
 
 .test {
