--- a/src/style/main.css
+++ b/src/style/main.css
@@ -27,68 +27,152 @@ html{
     left: 0;
 }
 
-.name{
-    font-family : 'Caveat';
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-user-select: none;
+.bg {
+
 }
 
-.subtitle {
-    font-family : 'Mate SC';
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-user-select: none;
-}
-
-.menu-btn{
+.home{
     position: absolute;
-    height: 35px;
-    top: -17.5px;
-    width: 100px;
-    left: -55px;
-    padding: 0 10px;
-    /* background-color: rgba(0,0,0,0.5); */
-    /* border: 1px solid white; */
-    /* border-radius: 5px; */
+    left: 50vw;
+    top: 50vh;
+    transform: translate(-50%, -50%);
     text-align: center;
-    line-height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.menu-btn .menu-p {
-    /* font-family : 'Mate SC'; */
+.home-text{
+    font-size: 20vh;
     font-family : 'Caveat';
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
+    color:white;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -moz-user-select: none;
+}
+
+
+.content {
+    position: absolute;
+    bottom: 10vh;
+    left: 50vw;
+    transform: translateX(-50%);
+    height: 160px;
+    overflow: hidden;
+    font-family: "Mate SC";
+    font-size: 70px;
+    line-height: 80px;
+    color: #ecf0f1;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -moz-user-select: none;
+  }
+  .content__container {
+    font-weight: 600;
+    overflow: hidden;
+    height: 80px;
+    padding: 0 80px;
+  }
+  .content__container:before {
+    content: "∴";
+    left: 0;
+  }
+  .content__container:after {
+    content: "∴";
+    position: absolute;
+    right: 0;
+  }
+  .content__container:after, .content__container:before {
+    position: absolute;
+    top: 0;
     color: white;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-user-select: none;
-}
+    font-size: 84px;
+    line-height: 80px;
+    -webkit-animation-name: opacity;
+    -webkit-animation-duration: 2.5s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: opacity;
+    animation-duration: 2.5s;
+    animation-iteration-count: infinite;
+  }
+  .content__container__text {
+    display: inline;
+    float: left;
+    margin: 0;
+  }
+  .content__container__list {
+    margin-top: 0;
+    text-align: center ;
+    list-style: none;
+    -webkit-animation-name: change;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: change;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+  }
+  .content__container__list__item {
+    line-height: 84px;
+    margin: 0;
+  }
+  
+  @-webkit-keyframes opacity {
+    0%, 100% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+  }
 
-.selected{
-    border: 1px solid white;
-    border-radius: 5px;
-    font-size: 45px;
-}
+  @-webkit-keyframes change {
+    0%, 12.66%, 100% {
+      transform: translate3d(0, 0, 0);
+    }
+    16.66%, 29.32% {
+      transform: translate3d(0, -25%, 0);
+    }
+    33.32%, 45.98% {
+      transform: translate3d(0, -50%, 0);
+    }
+    49.98%, 62.64% {
+      transform: translate3d(0, -75%, 0);
+    }
+    66.64%, 79.3% {
+      transform: translate3d(0, -50%, 0);
+    }
+    83.3%, 95.96% {
+      transform: translate3d(0, -25%, 0);
+    }
+  }
 
-.test {
-    position: absolute;
-    height: 5px;
-    top: -2.5px;
-    width: 5px;
-    left: -2.5px;
-    background-color: "#fff"; 
-    border: 1px solid white;
-    border-radius: 50%;
-}
+  @keyframes opacity {
+    0%, 100% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes change {
+    0%, 12.66%, 100% {
+      transform: translate3d(0, 0, 0);
+    }
+    16.66%, 29.32% {
+      transform: translate3d(0, -25%, 0);
+    }
+    33.32%, 45.98% {
+      transform: translate3d(0, -50%, 0);
+    }
+    49.98%, 62.64% {
+      transform: translate3d(0, -75%, 0);
+    }
+    66.64%, 79.3% {
+      transform: translate3d(0, -50%, 0);
+    }
+    83.3%, 95.96% {
+      transform: translate3d(0, -25%, 0);
+    }
+  }
