--- a/src/style/main.css
+++ b/src/style/main.css
@@ -2,6 +2,59 @@
     padding: 0;
     margin: 0;
 }
+/* http://meyerweb.com/eric/tools/css/reset/ */
+/* v1.0 | 2007vw2 */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+}
+
+/* remember to highlight inserts somehow! */
+ins {
+	text-decoration: none;
+}
+del {
+	text-decoration: line-through;
+}
+
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 body,
 html{
@@ -21,158 +74,191 @@ html{
     height: 100%;
 }
 
-.intro{
-    position: absolute;
-    top: 0;
-    left: 0;
+.menu{
+  position: fixed;
+  top: 2vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
 }
 
-.bg {
+.menu-list{
+  display: flex;
+  flex-flow: row;
+}
 
+.menu-btn{
+  font-family: 'Mate SC';
+  color: white;
+  margin: 0 5vw;
+  transition: 200ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -moz-user-select: none;
+}
+
+.menu-btn:hover{
+  color: darkgray;
+}
+
+.menu-btn:active{
+  color:white;
+}
+
+.selected{
+  border-bottom: 1px solid white;
+}
+.selected:hover{
+  border-color: darkgray;
+}
+.selected:active{
+  border-color:white;
 }
 
 .home{
-    position: absolute;
-    left: 50vw;
-    top: 50vh;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  position: absolute;
+  left: 25vw;
+  top: calc(50vh - 10vw);
+  text-align: center;
 }
 
 .home-text{
-    font-size: 20vh;
-    font-family : 'Caveat';
-    color:white;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-user-select: none;
+  width: 50vw;
+  font-size: 10vw;
+  font-family : 'Caveat';
+  color:white;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -moz-user-select: none;
 }
 
 
+
 .content {
-    position: absolute;
-    bottom: 10vh;
-    left: 50vw;
-    transform: translateX(-50%);
-    height: 160px;
-    overflow: hidden;
-    font-family: "Mate SC";
-    font-size: 70px;
-    line-height: 80px;
-    color: #ecf0f1;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-user-select: none;
-  }
-  .content__container {
-    font-weight: 600;
-    overflow: hidden;
-    height: 80px;
-    padding: 0 80px;
-  }
-  .content__container:before {
-    content: "∴";
-    left: 0;
-  }
-  .content__container:after {
-    content: "∴";
-    position: absolute;
-    right: 0;
-  }
-  .content__container:after, .content__container:before {
-    position: absolute;
-    top: 0;
-    color: white;
-    font-size: 84px;
-    line-height: 80px;
-    -webkit-animation-name: opacity;
-    -webkit-animation-duration: 2.5s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: opacity;
-    animation-duration: 2.5s;
-    animation-iteration-count: infinite;
-  }
-  .content__container__text {
-    display: inline;
-    float: left;
-    margin: 0;
-  }
-  .content__container__list {
-    margin-top: 0;
-    text-align: center ;
-    list-style: none;
-    -webkit-animation-name: change;
-    -webkit-animation-duration: 10s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: change;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-  }
-  .content__container__list__item {
-    line-height: 84px;
-    margin: 0;
-  }
-  
-  @-webkit-keyframes opacity {
-    0%, 100% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-  }
+  position: absolute;
+  bottom: calc(10vh + 3.5vw);
+  left: 15vw;
+  height: 160px;
+  width: 70vw;
+  overflow: hidden;
+  font-family: "Mate SC";
+  font-size: 6.6vw;
+  line-height: 7vw;
+  color: #ecf0f1;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -moz-user-select: none;
+}
+.content__container {
+  font-weight: 600;
+  overflow: hidden;
+  height: 7vw;
+  padding: 0 7vw;
+}
+.content__container:before {
+  content: "∴";
+  left: 0;
+}
+.content__container:after {
+  content: "∴";
+  position: absolute;
+  right: 0;
+}
+.content__container:after, .content__container:before {
+  position: absolute;
+  top: 0;
+  color: white;
+  font-size: 7.1vw;
+  line-height: 7vw;
+  -webkit-animation-name: opacity;
+  -webkit-animation-duration: 2.5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: opacity;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+}
+.content__container__text {
+  display: inline;
+  float: left;
+  margin: 0;
+}
+.content__container__list {
+  margin-top: 0;
+  text-align: center ;
+  list-style: none;
+  -webkit-animation-name: change;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: change;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+.content__container__list__item {
+  line-height: 7.1vw;
+  margin: 0;
+}
 
-  @-webkit-keyframes change {
-    0%, 12.66%, 100% {
-      transform: translate3d(0, 0, 0);
-    }
-    16.66%, 29.32% {
-      transform: translate3d(0, -25%, 0);
-    }
-    33.32%, 45.98% {
-      transform: translate3d(0, -50%, 0);
-    }
-    49.98%, 62.64% {
-      transform: translate3d(0, -75%, 0);
-    }
-    66.64%, 79.3% {
-      transform: translate3d(0, -50%, 0);
-    }
-    83.3%, 95.96% {
-      transform: translate3d(0, -25%, 0);
-    }
+@-webkit-keyframes opacity {
+  0%, 100% {
+    opacity: 0;
   }
+  50% {
+    opacity: 1;
+  }
+}
 
-  @keyframes opacity {
-    0%, 100% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
+@-webkit-keyframes change {
+  0%, 12.66%, 100% {
+    transform: translate3d(0, 0, 0);
   }
+  16.66%, 29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+  33.32%, 45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+  49.98%, 62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+  66.64%, 79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+  83.3%, 95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
 
-  @keyframes change {
-    0%, 12.66%, 100% {
-      transform: translate3d(0, 0, 0);
-    }
-    16.66%, 29.32% {
-      transform: translate3d(0, -25%, 0);
-    }
-    33.32%, 45.98% {
-      transform: translate3d(0, -50%, 0);
-    }
-    49.98%, 62.64% {
-      transform: translate3d(0, -75%, 0);
-    }
-    66.64%, 79.3% {
-      transform: translate3d(0, -50%, 0);
-    }
-    83.3%, 95.96% {
-      transform: translate3d(0, -25%, 0);
-    }
+@keyframes opacity {
+  0%, 100% {
+    opacity: 0;
   }
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes change {
+  0%, 12.66%, 100% {
+    transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+  33.32%, 45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+  49.98%, 62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+  66.64%, 79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+  83.3%, 95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
