--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -35,6 +37,10 @@ blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
+}
+
+p {
+  margin-top: 0;
 }
 
 /* remember to define focus styles! */
@@ -116,6 +122,22 @@ html{
   border-color:white;
 }
 
+.unselectable {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -moz-user-select: none;
+}
+
+.homepage{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .home{
   position: absolute;
   left: 25vw;
@@ -128,11 +150,6 @@ html{
   font-size: 10vw;
   font-family : 'Caveat';
   color:white;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -moz-user-select: none;
 }
 
 
@@ -148,11 +165,6 @@ html{
   font-size: 6.6vw;
   line-height: 7vw;
   color: #ecf0f1;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -moz-user-select: none;
 }
 .content__container {
   font-weight: 600;
@@ -261,4 +273,111 @@ html{
   83.3%, 95.96% {
     transform: translate3d(0, -25%, 0);
   }
+}
+
+.whoami-container {
+  position: absolute;
+  top: 35vh;
+  height: 30vh;
+  left: 15vw;
+  width: 70vw;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+}
+.whoami-container > h1 {
+  font-size: 3vw;
+  text-align: center;
+  color: white;
+}
+
+.whoami-container > p {
+  text-align: center;
+  color: white;
+}
+
+.projects-container{
+  position: absolute;
+  top: 10vh;
+  height: 80vh;
+  left: 30vw;
+  width: 65vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.project-card {
+  display: flex;
+  flex-flow: row;
+  padding: 1rem;
+  height: 80%;
+  margin: 2%;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 25px;
+}
+
+.spine {
+  height: 80%;
+  width: 3px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255) 50%, rgba(255, 255, 255, 0) 100%); 
+  border-radius: 1.5px;
+}
+
+.project-logo {
+  border-top-left-radius: 50% 50%;
+  border-top-right-radius: 50% 50%;
+  border-bottom-right-radius: 50% 50%;
+  border-bottom-left-radius: 50% 50%;
+  border: 2px solid rgb(255, 255, 255);
+  width: 100px;
+  height:100px ;
+  padding: 2.5px;
+  margin: 15px;
+  box-shadow: 0px 0px 5px -1px #FFFFFF;
+}
+
+.project-links {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  height: 80% !important;
+  align-items: center;
+}
+
+.project-description {
+  color: white;
+  text-align: left;
+  font-family: 'Montserrat';
+}
+
+.project-btns {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+}
+
+.btn-p{
+  width: 100%;
+  background: rgb(255, 255, 255);
+  border-radius: 1rem;
+  align-items: center;
+  padding: 5px;
+  text-align: center;
+  color: rgb(62, 0, 155);
+  box-shadow: 0px 0px 5px -1px #FFFFFF;
+  transition: 500ms;
+}
+
+.btn-p:hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: rgb(255, 255, 255);
+}
+
+.project-title {
+  margin: 5px;
+  color: white;
+  text-align: center;
 }
