--- a/src/style/main.css
+++ b/src/style/main.css
@@ -324,6 +324,11 @@ html{
   background: rgb(255, 255, 255);
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255) 50%, rgba(255, 255, 255, 0) 100%); 
   border-radius: 1.5px;
+  transition: 100ms;
+}
+
+.project-card:hover{
+  background: rgba(255, 255, 255, 0.025);
 }
 
 .project-logo {
@@ -336,6 +341,7 @@ html{
   height:100px ;
   padding: 2.5px;
   margin: 15px;
+  -webkit-box-shadow: 0px 0px 5px -1px #FFFFFF;
   box-shadow: 0px 0px 5px -1px #FFFFFF;
 }
 
@@ -367,6 +373,7 @@ html{
   padding: 5px;
   text-align: center;
   color: rgb(62, 0, 155);
+  -webkit-box-shadow: 0px 0px 5px -1px #FFFFFF;
   box-shadow: 0px 0px 5px -1px #FFFFFF;
   transition: 500ms;
 }
