--- a/src/style/main.css
+++ b/src/style/main.css
@@ -72,6 +72,14 @@ html{
     overflow: hidden;
 }
 
+p, h1, h2, a, button, span, li {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -moz-user-select: none;
+}
+
 .canvas{
     position: absolute;
     top: 0;
@@ -97,11 +105,7 @@ html{
   color: white;
   margin: 0 5vw;
   transition: 200ms;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -moz-user-select: none;
+
 }
 
 .menu-btn:hover{
@@ -120,14 +124,6 @@ html{
 }
 .selected:active{
   border-color:white;
-}
-
-.unselectable {
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -moz-user-select: none;
 }
 
 .homepage{
@@ -328,7 +324,7 @@ html{
 }
 
 .project-card:hover{
-  background: rgba(255, 255, 255, 0.025);
+  background: rgba(255, 255, 255, 0.05);
 }
 
 .project-logo {
@@ -356,7 +352,7 @@ html{
 .project-description {
   color: white;
   text-align: left;
-  font-family: 'Montserrat';
+  font-family: 'Mate SC';
 }
 
 .project-btns {
@@ -373,9 +369,10 @@ html{
   padding: 5px;
   text-align: center;
   color: rgb(62, 0, 155);
+  border: none;
   -webkit-box-shadow: 0px 0px 5px -1px #FFFFFF;
   box-shadow: 0px 0px 5px -1px #FFFFFF;
-  transition: 500ms;
+  transition: 200ms;
 }
 
 .btn-p:hover {
@@ -383,8 +380,209 @@ html{
   color: rgb(255, 255, 255);
 }
 
+.btn-p:active{
+  -webkit-box-shadow: 0px 0px 5px 3px #FFFFFF;
+  box-shadow: 0px 0px 5px 3px #FFFFFF;
+}
+
 .project-title {
   margin: 5px;
   color: white;
   text-align: center;
+}
+
+.modal-bg {
+  position: absolute;
+  top: 10vh;
+  height: 80vh;
+  left: 30vw;
+  width: 65vw;
+  display: grid;
+  grid-template-columns: 1% 49.5% 49.5%;
+  grid-template-rows: 10% 50% 30% 10%;
+  gap:1%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.modal-spine {
+  grid-row-start: 1;
+  grid-row-end: span 4;
+  height: 80%;
+  width: 3px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255) 50%, rgba(255, 255, 255, 0) 100%); 
+  border-radius: 1.5px;
+}
+
+.modal-carousel {
+  position: relative;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.modal-back, .modal-forward {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -23px;
+  padding: 17px;
+  color: grey;
+  font-weight: bold;
+  font-size: 19px;
+  transition: 0.4s ease;
+  border-radius: 0 5px 5px 0;
+  user-select: none;
+}
+
+.modal-back {
+  left: 0;
+}
+
+.modal-forward {
+  right: 0;
+  border-radius: 5px 0 0 5px;
+}
+
+.modal-back:hover, .modal-forward:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.modal-img {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+}
+
+.modal-side {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 2%;
+}
+
+.modal-top-row {
+  grid-column-start: 2;
+  grid-column-end: span 3;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+}
+
+.modal-title {
+  justify-self: center;
+  color: #fff;
+  font-family: 'Caveat';
+  font-weight: 900;
+  font-size: 1.5em;
+  text-shadow: 0px 0px 20px #00FFDB;
+}
+
+.modal-quit {
+  width: auto !important;
+  padding: 15px;
+}
+
+.modal-description {
+  justify-self: center;
+  color: #ffffff;
+  text-align: justify;
+  font-weight: bold;
+  font-family: 'Mate SC';
+}
+
+.modal-tech {
+  height: 100%;
+  grid-column-start: 2;
+  grid-column-end: span 3;
+  display: grid;
+  direction: ltr;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 100%;
+}
+
+.modal-ul-div {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+}
+
+.modal-ul {
+  height: 80%;
+  align-items: baseline;
+}
+
+.modal-ul-title {
+  font-size: 1.2rem;
+  font-weight: 900;
+  color: #fff;
+  font-family: 'Mate SC';
+  text-shadow: 0px 0px 20px #FF00E3;
+}
+
+.modal-ul-title::before{
+  content: '</';
+  left: 0;
+}
+
+.modal-ul-title::after{
+  content: '>';
+  right: 0;
+}
+
+.production-ul {
+  margin-left: 2%;
+  grid-column-start: 3;
+  grid-column-end: span 4;
+}
+
+
+.modal-li {
+  margin-top: 5px;
+  color: #fff;
+  font-family: 'Mate SC';
+  
+}
+
+.modal-li::before{
+  content: '=> ';
+  left: 0;
+}
+
+.modal-btn, .modal-quit{
+  width: 100%;
+  background: rgba(255, 255, 255, 0.85);
+  border-radius: 1rem;
+  align-items: center;
+  padding: 5px;
+  text-align: center;
+  color: rgb(62, 0, 155);
+  font-weight: bold;
+  border: none;
+  -webkit-box-shadow: 0px 0px 5px -1px #FFFFFF;
+  box-shadow: 0px 0px 5px -1px #FFFFFF;
+  transition: 200ms;
+}
+  
+.modal-btn:hover, .modal-quit:hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: rgb(255, 255, 255);
+}
+
+.modal-btn:active, .modal-quit:active{
+  -webkit-box-shadow: 0px 0px 5px 3px #FFFFFF;
+  box-shadow: 0px 0px 5px 3px #FFFFFF;
+}
+
+#coin-modal a{
+  grid-column-start: 3;
+}
+
+.hide{
+  display: none !important;
 }
