--- a/src/style/main.css
+++ b/src/style/main.css
@@ -95,9 +95,65 @@ p, h1, h2, a, button, span, li {
   left: 0;
   height: 100vh;
   width: 100%;
-  background-color:rgb(255, 255, 255);
+  background-color: rgb(79, 79, 79);
   opacity: 0;
   z-index: 10;
+  box-shadow: inset 0 0 100px black;
+}
+
+.poem-wrapper {
+  opacity: 0;
+  position: relative;
+  top: 25%;
+  left: 25%;
+  height: 50%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.poem-p {
+  font-size: 1.2em;
+  font-family: "Caveat";
+  color: white;
+  text-align: center;
+}
+
+.poem-author {
+  color: #ccc;
+  font-size: 0.7em;
+  font-style: italic;
+  align-self: end;
+}
+
+.enter-site {
+  align-self: center;
+  background-color: rgb(46, 46, 46);
+  color: darkgrey;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  width: 15%;
+  transition: 200ms;
+  -webkit-animation-name: pulse;
+  -webkit-animation-duration: 1.5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: pulse;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  box-shadow: 0 0 4px white;
+}
+
+.enter-site:hover {
+  background-color: rgb(160, 160, 160);
+  color: rgb(0, 0, 0);
+}
+
+.enter-site:active {
+  background-color: rgb(77, 77, 77);
+  color: rgb(0, 0, 0);
 }
 
 .loading-container > img {
@@ -156,7 +212,7 @@ p, h1, h2, a, button, span, li {
   height: 10%;
   width: 30%;
   opacity: 0.75;
-  color: #0082fc;
+  color: #00386c;
   background-color: #74bcff;
   box-shadow: 0 0 5px #00488D, 0 0 10px #00488D, 0 0 15px #00488D, 0 0 20px #00488D, 0 0 30px #00488D, 0 0 40px #00488D, 0 0 55px #00488D, 0 0 75px #00488D, 2px 2px 2px #CE5937;
   transition: 0.2s;
@@ -299,90 +355,6 @@ p, h1, h2, a, button, span, li {
   margin: 0;
 }
 
-@-webkit-keyframes opacity {
-  0%, 100% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes change {
-  0%, 12.66%, 100% {
-    transform: translate3d(0, 0, 0);
-  }
-  16.66%, 29.32% {
-    transform: translate3d(0, -25%, 0);
-  }
-  33.32%, 45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-  49.98%, 62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-  66.64%, 79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%, 95.96% {
-    transform: translate3d(0, -25%, 0);
-  }
-}
-
-@keyframes opacity {
-  0%, 100% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-}
-
-@keyframes change {
-  0%, 12.66%, 100% {
-    transform: translate3d(0, 0, 0);
-  }
-  16.66%, 29.32% {
-    transform: translate3d(0, -25%, 0);
-  }
-  33.32%, 45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-  49.98%, 62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-  66.64%, 79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%, 95.96% {
-    transform: translate3d(0, -25%, 0);
-  }
-}
-
-@keyframes colorWarning {
-  0%, 100% {
-    opacity: 0;
-    color: #fdc8c8;
-  }
-  75% {
-    opacity: .75;
-    color: #FF5954;
-    text-shadow: 0 0 5px #370C00, 0 0 10px #A42A07, 0 0 15px #A42A07, 0 0 20px #A42A07, 0 0 30px #A42A07, 0 0 40px #A42A07, 0 0 55px #A42A07, 0 0 75px #A42A07, 2px 2px 2px #CE5937;
-  }
-}
-
-
-@-webkit-keyframes colorWarning {
-  0%, 100% {
-    opacity: 0;
-    color: #fdc8c8;
-  }
-  75% {
-    opacity: .75;
-    color: #FF5954;
-    text-shadow: 0 0 5px #370C00, 0 0 10px #A42A07, 0 0 15px #A42A07, 0 0 20px #A42A07, 0 0 30px #A42A07, 0 0 40px #A42A07, 0 0 55px #A42A07, 0 0 75px #A42A07, 2px 2px 2px #CE5937;
-  }
-}
 
 .whoami-container {
   position: absolute;
@@ -801,5 +773,109 @@ p, h1, h2, a, button, span, li {
   font-weight: 800 ;
   color: rgb(0, 195, 255);
   text-decoration: none;
+}
+
+@-webkit-keyframes opacity {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes change {
+  0%, 12.66%, 100% {
+    transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+  33.32%, 45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+  49.98%, 62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+  66.64%, 79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+  83.3%, 95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
+
+@keyframes opacity {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes change {
+  0%, 12.66%, 100% {
+    transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+  33.32%, 45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+  49.98%, 62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+  66.64%, 79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+  83.3%, 95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
+
+@keyframes colorWarning {
+  0%, 100% {
+    opacity: 0;
+    color: #fdc8c8;
+  }
+  75% {
+    opacity: .75;
+    color: #f83029;
+    text-shadow: 0 0 5px #370C00, 0 0 10px #A42A07, 0 0 15px #A42A07, 0 0 20px #A42A07, 0 0 30px #A42A07, 0 0 40px #A42A07, 0 0 55px #A42A07, 0 0 75px #A42A07, 2px 2px 2px #CE5937;
+  }
+}
+
+
+@-webkit-keyframes colorWarning {
+  0%, 100% {
+    opacity: 0;
+    color: #fdc8c8;
+  }
+  75% {
+    opacity: .75;
+    color: #f83029;
+    text-shadow: 0 0 5px #370C00, 0 0 10px #A42A07, 0 0 15px #A42A07, 0 0 20px #A42A07, 0 0 30px #A42A07, 0 0 40px #A42A07, 0 0 55px #A42A07, 0 0 75px #A42A07, 2px 2px 2px #CE5937;
+  }
+}
+
+@keyframes pulse {
+  0%, 100% {
+    box-shadow: 0 0 3px white;
+  }
+  50% {
+    box-shadow: 0 0 18px white;
+  }
+}
+
+
+@-webkit-keyframes pulse {
+  0%, 100% {
+    box-shadow: 0 0 3px white;
+  }
+  50% {
+    box-shadow: 0 0 18px white;
+  }
 }
 
