--- a/src/style/main.css
+++ b/src/style/main.css
@@ -439,6 +439,7 @@ p, h1, h2, a, button, span, li {
 
 .move-mouse-div > p {
   color: white;
+  text-shadow: 0px 0px 2px rgba(255,255,255, 0.3);
   font-family: 'Montserrat';
 }
 
