--- a/src/style/main.css
+++ b/src/style/main.css
@@ -247,6 +247,7 @@ p, h1, h2, a, button, span, li {
 
 .welcome-container {
   position: absolute;
+  opacity: 0;
   left: 25vw;
   top: 37.5vh;
   width: 50vw;
@@ -267,6 +268,8 @@ p, h1, h2, a, button, span, li {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0px 0px 2px rgba(255,255,255, 0.3);
+
 }
 
 .scroll-down {
@@ -452,6 +455,7 @@ p, h1, h2, a, button, span, li {
   width: 15px;
   background-color: white;
   border-radius: 50%;
+  box-shadow: 0px 0px 2px rgba(255,255,255, 0.3);
   z-index: 2;
   transform: translateY(-50%);  
 }
