--- a/src/style/main.css
+++ b/src/style/main.css
@@ -379,6 +379,7 @@ li {
   font-size: 10vw;
   font-family: "Caveat";
   color: white;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
 
 .content {
@@ -402,19 +403,21 @@ li {
 .content__container:before {
   content: "∴";
   left: 0;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
 .content__container:after {
   content: "∴";
   position: absolute;
   right: 0;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
 .content__container:after,
 .content__container:before {
   position: absolute;
   top: 0;
   color: white;
-  font-size: 7.1vw;
-  line-height: 7vw;
+  font-size: 1.1em;
+  line-height: 1em;
   -webkit-animation-name: opacity;
   -webkit-animation-duration: 2.5s;
   -webkit-animation-iteration-count: infinite;
@@ -439,8 +442,9 @@ li {
   animation-iteration-count: infinite;
 }
 .content__container__list__item {
-  line-height: 7.1vw;
+  line-height: 1em;
   margin: 0;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
 
 .whoami-container {
@@ -951,12 +955,12 @@ li {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 90vw;
   height: 50vh;
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .contact-header {
