--- a/src/style/main.css
+++ b/src/style/main.css
@@ -966,7 +966,7 @@ li {
 .contact-header {
   margin: 25px;
   font-family: "Caveat";
-  font-size: 1.5em;
+  font-size: 2.5em;
   color: white;
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
@@ -983,14 +983,17 @@ li {
 .contact-h2 {
   font-size: 1.1em;
   font-weight: 600;
-  margin: 10px;
+  font-style: italic;
+  margin: 10px 0;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.2);
+  font-family: "Montserrat";
 }
 
 .contact-p {
-  margin: 5px;
+  margin: 5px 0;
   font-style: italic;
   text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.2);
+  font-family: "Montserrat";
 }
 
 @-webkit-keyframes opacity {
