--- a/src/style/main.css
+++ b/src/style/main.css
@@ -956,21 +956,25 @@ li {
 }
 
 .made-with-li {
-  font-weight: 600;
+  padding: 3px;
+  font-weight: 500;
   font-family: "Montserrat";
   color: #faeff1;
   text-align: left;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.2);
 }
 .made-with-li::before {
-  content: "> ";
+  content: "~ ";
   color: rgb(187, 238, 253);
 }
 
 .made-with-li > a {
-  font-weight: 800;
-  color: rgb(0, 195, 255);
+  font-weight: 600;
+  color: #a7e4f7;
   text-decoration: none;
+}
+.made-with-li > a:hover {
+  text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.4);
 }
 
 .contact-container {
