--- a/src/style/main.css
+++ b/src/style/main.css
@@ -254,11 +254,11 @@ li {
 }
 
 .load-texts {
-  font-size: 1rem;
-  color: #74bcff;
-  text-shadow: 0 0 5px #00488d, 0 0 10px #00488d, 0 0 15px #00488d,
-    0 0 20px #00488d, 0 0 30px #00488d, 0 0 40px #00488d, 0 0 55px #00488d,
-    0 0 75px #00488d, 2px 2px 2px #ce5937;
+  font-size: 1.5em;
+  color: #d6faff;
+  text-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3,
+    0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3, 0 0 55px #039bb3,
+    0 0 75px #039bb3, 2px 2px 2px #ce5937;
   opacity: 75%;
 }
 
@@ -266,29 +266,29 @@ li {
   font-size: 2rem !important;
 }
 
+.img-warning {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
 .text-warning {
   text-align: center;
-  color: #74bcff;
-  text-shadow: 0 0 5px #00488d, 0 0 10px #00488d, 0 0 15px #00488d,
-    0 0 20px #00488d, 0 0 30px #00488d, 0 0 40px #00488d, 0 0 55px #00488d,
-    0 0 75px #00488d, 2px 2px 2px #ce5937;
-  opacity: 75%;
-  -webkit-animation-name: colorWarning;
-  -webkit-animation-duration: 0.75s;
-  -webkit-animation-iteration-count: infinite;
-  animation-name: colorWarning;
-  animation-duration: 0.75s;
-  animation-iteration-count: infinite;
+  color: #ff9393;
+  text-shadow: 0 0 5px #370c00, 0 0 10px #aa2735, 0 0 15px #aa2735,
+    0 0 20px #aa2735, 0 0 30px #aa2735, 0 0 40px #aa2735, 0 0 55px #aa2735,
+    0 0 75px #aa2735, 2px 2px 2px #ce5937;
 }
 
 .load-bar {
   width: 5px;
   height: 30px;
-  background-color: #74bcff;
+  background-color: #00bad3;
   opacity: 75%;
-  box-shadow: 0 0 5px #00488d, 0 0 10px #00488d, 0 0 15px #00488d,
-    0 0 20px #00488d, 0 0 30px #00488d, 0 0 40px #00488d, 0 0 55px #00488d,
-    0 0 75px #00488d, 2px 2px 2px #ce5937;
+  box-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3,
+    0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3, 0 0 55px #039bb3,
+    0 0 75px #039bb3, 2px 2px 2px #ce5937;
 }
 
 .exit-load-btn {
@@ -297,11 +297,11 @@ li {
   height: 10%;
   width: 30%;
   opacity: 0.75;
-  color: #00386c;
+  color: #d6faff;
   background-color: #74bcff;
-  box-shadow: 0 0 5px #00488d, 0 0 10px #00488d, 0 0 15px #00488d,
-    0 0 20px #00488d, 0 0 30px #00488d, 0 0 40px #00488d, 0 0 55px #00488d,
-    0 0 75px #00488d, 2px 2px 2px #ce5937;
+  box-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3,
+    0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3, 0 0 55px #039bb3,
+    0 0 75px #039bb3, 2px 2px 2px #ce5937;
   transition: 0.2s;
 }
 
@@ -1099,36 +1099,6 @@ li {
   83.3%,
   95.96% {
     transform: translate3d(0, -25%, 0);
-  }
-}
-
-@keyframes colorWarning {
-  0%,
-  100% {
-    opacity: 0;
-    color: #fdc8c8;
-  }
-  75% {
-    opacity: 0.75;
-    color: #f83029;
-    text-shadow: 0 0 5px #370c00, 0 0 10px #a42a07, 0 0 15px #a42a07,
-      0 0 20px #a42a07, 0 0 30px #a42a07, 0 0 40px #a42a07, 0 0 55px #a42a07,
-      0 0 75px #a42a07, 2px 2px 2px #ce5937;
-  }
-}
-
-@-webkit-keyframes colorWarning {
-  0%,
-  100% {
-    opacity: 0;
-    color: #fdc8c8;
-  }
-  75% {
-    opacity: 0.75;
-    color: #f83029;
-    text-shadow: 0 0 5px #370c00, 0 0 10px #a42a07, 0 0 15px #a42a07,
-      0 0 20px #a42a07, 0 0 30px #a42a07, 0 0 40px #a42a07, 0 0 55px #a42a07,
-      0 0 75px #a42a07, 2px 2px 2px #ce5937;
   }
 }
 
