--- a/src/style/main.css
+++ b/src/style/main.css
@@ -374,7 +374,7 @@ li {
 .arrows {
   font-size: 1.1em;
   text-align: center;
-  color: #ffffffff;
+  color: #000;
 }
 
 .welcome-text {
@@ -425,12 +425,12 @@ li {
   padding: 0 7vw;
 }
 .content__container:before {
-  content: "∴";
+  content: "⊷";
   left: 0;
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
 .content__container:after {
-  content: "∴";
+  content: "⊶";
   position: absolute;
   right: 0;
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
